Links - Word break to avoid long links overflowing

--- a/client/scss/components/_typography.scss
+++ b/client/scss/components/_typography.scss
@@ -16,6 +16,7 @@ h6 {
 
 a {
   transition: color .2s ease;
+  word-break: break-word;
 
   &:hover {
     color: darken($primary-color, 15%);
